[package]
name = "nysa"
description = "A bus for passing messages around between independent subsystems of an application"
version = "0.1.1"
edition = "2018"
license = "MIT"
repository = "https://github.com/liquidev/nysa"
readme = "README.md"
categories = ["concurrency", "asynchronous"]

[features]
default = ["global"]
global = ["lazy_static"]

[dependencies]
lazy_static = { version = "1.4.0", optional = true }
